fix: scrollbar color

--- a/app/globals.css
+++ b/app/globals.css
@@ -74,7 +74,7 @@
   .scrollbars::-webkit-scrollbar-thumb {
     background-color: hsl(var(--border));
     border-radius: 1rem;
-    border: 0.25rem solid rgb(var(--background));
+    border: 0.25rem solid var(--background);
   }
 
   .scrollbars::-webkit-scrollbar-button {
